# retarded-C

./: CMakeLists.txt  README.md  algo1.c  algo10.c  algo2.c  algo3.c  algo4.c  algo5.c  algo6.c  algo61.c  algo62.c  algo63.c  algo9.c
presentations/: CMakeLists.txt  examples.c  testheader.c  testheader.h
