project(retarded-C)

add_subdirectory(presentations)

add_executable(ALGO1 algo1.c)
add_executable(ALGO2 algo2.c)
add_executable(ALGO3 algo3.c)
add_executable(ALGO4 algo4.c)
add_executable(ALGO5 algo5.c)
add_executable(ALGO6 algo6.c)
add_executable(ALGO6_1 algo61.c)
add_executable(ALGO6_2 algo62.c)
add_executable(ALGO6_3 algo63.c)
add_executable(ALGO7 algo9.c)
